# diagonal-unitary-synthesis

./: .gitignore  README.md  开题报告.md
LaTeX_bishe/: .gitignore  README.md  latexmkrc  main.tex  ref.bib
code/: README.md  environment.yml  pyproject.toml  requirements.txt
code/diagonal_synth/: __init__.py  exact.py  gadgets.py  mcts.py  metrics.py  optimize.py  path_search.py  walsh.py
code/experiments/: __init__.py  compare_baselines.py  gen_random.py  run_exact.py  run_mcts.py  run_path_search.py
code/results/: literature_survey_ch2.md
code/tests/: test_baselines_smoke.py  test_exact.py  test_gadgets.py  test_metrics.py  test_walsh.py
