[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "diagonal-synth"
version = "0.1.0"
description = "Baseline reproduction for approximate diagonal unitary synthesis"
requires-python = ">=3.12"
dependencies = [
  "numpy>=2.0,<2.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["diagonal_synth*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
